--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
         <div class="screen" id="screen"></div>
       </div>
       <aside class="sidebar">
-        <h2 class="input-title">JSON</h2>
+        <div class="titles">
+          <h2 class="input-title">JSON</h2>
+          <p class="tab">use tabs not spaces</p>
+        </div>
         <div id="input" class="input" contenteditable></div>
       </aside>
     </div>
