--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <h2 class="input-title">JSON</h2>
           <p class="tab">use tabs not spaces</p>
         </div>
-        <div id="input" class="input" contenteditable></div>
+        <pre id="input" class="input" contenteditable></pre>
       </aside>
     </div>
   </body>
