--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
     <link rel="stylesheet" href="css/sidebar.css" />
     <link rel="stylesheet" href="css/message.css" />
     <link rel="stylesheet" href="css/viewport.css" />
+    <link rel="stylesheet" href="css/json.css" />
     <script src="js/main.js" type="module"></script>
   </head>
   <body>
-    <h4 class="message" id="message"></h4>
+    <h2 class="message" id="message"></h2>
     <div class="app">
       <div class="viewport" id="viewport">
         <div class="screen" id="screen"></div>
